--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "image-size": "^1.1.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-  
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23"
@@ -25,6 +24,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
+    "@typescript-eslint/parser": "^8.27.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
