--- a/package.json
+++ b/package.json
@@ -3,23 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -H 0.0.0.0",
+    "dev": "next dev  -H 0.0.0.0",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcgis/core": "^4.32.9",
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^5.22.0",
+    "@react-google-maps/api": "^2.20.6",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
+    "@types/google.maps": "^3.58.1",
+    "@types/react-select": "^5.0.1",
+    "colorthief": "^2.6.0",
     "firebase": "^11.3.0",
     "firebase-admin": "^13.1.0",
+    "framer-motion": "^12.6.3",
+    "fuse.js": "^7.1.0",
     "image-size": "^1.1.1",
-   
-    "next": "15.0.3",
+    "lucide-react": "^0.487.0",
+    "next": "^15.2.4",
+    "nominatim-client": "^3.2.1",
+    "places.js": "^1.19.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-paginate": "^8.3.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-select": "^5.10.1",
+    "sharp": "^0.33.5",
+    "stripe": "^17.7.0",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
