--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "image-size": "^1.1.1",
     "lucide-react": "^0.487.0",
     "next": "^15.2.4",
+    "nodemailer": "^6.10.1",
     "nominatim-client": "^3.2.1",
     "places.js": "^1.19.0",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -38,10 +39,12 @@
     "react-select": "^5.10.1",
     "sharp": "^0.33.5",
     "stripe": "^17.7.0",
+    "swr": "^2.3.3",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
